# microstrain_inertial_localization

./: CMakeLists.txt  README.md  package.xml
config/common/: ekf_localization.yml  empty.yml  gq7_empty.yml  gq7_robot_localization_imu.yml  ntrip_client.yml
config/earth/: cv7_ins.yml  gq7.yml
config/gq7_earth/: gq7.yml
config/gq7_map/: gq7.yml
config/gq7_odom/: gq7.yml  ntrip_client.yml
config/map/: cv7_ins.yml  gq7.yml
launch/: cv7_ins_earth_launch.py  cv7_ins_launch.py  gq7_earth.launch  gq7_earth_launch.py  gq7_launch.py  gq7_map.launch  gq7_map_launch.py  gq7_odom.launch  gq7_odom_launch.py
launch/common/: microstrain_inertial_driver_launch.py  ntrip_client_launch.py  ublox_f9p_launch.py
launch/include/: mock_robot_description.launch
urdf/: mock_robot.urdf.xacro
