<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>microstrain_inertial_localization</name>
  <version>1.0.0</version>
  <description>The microstrain_inertial_localization package</description>
  <maintainer email="rob.fisher@hbkworld.com">Rob Fisher</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend version_gte="4.0.0">microstrain_inertial_driver</exec_depend>
  <exec_depend version_gte="1.4.0">ntrip_client</exec_depend>
  <exec_depend>ublox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
